# XuwdHub

AdapterHacheter/: AdapterHacheter.txt
AdapterHacheter/app/: build.gradle
AdapterHacheter/gradle/wrapper/: gradle-wrapper.properties
FileManage/MyApplication/: local.properties
FileManage/MyApplication/app/: build.gradle
FileManager/: build.gradle
FileManager/app/: build.gradle
FileManager/gradle/wrapper/: gradle-wrapper.properties
JCallBack/: settings.gradle
JCallBack/app/: build.gradle
JCallBack/gradle/wrapper/: gradle-wrapper.properties
JImageTest/: settings.gradle
JImageTest/app/: build.gradle
JImageTest/app/jni/: CMakeLists.txt  ImageUtil.cpp  NativeLibrary.cpp  com_xuwd_jimagetest_NativeLibrary.h
JImageTest/gradle/wrapper/: gradle-wrapper.properties
JListViewClick/app/: build.gradle
JListViewClick/gradle/wrapper/: gradle-wrapper.properties
JLive/app/: build.gradle
JLive/app/jni/: CMakeLists.txt  JNative.c  com_xuwd_jlive_JFFmpeg.h  com_xuwd_jlive_JFFmpeg_SingletonInstance.h
JMap/app/: build.gradle
JRecycleView/app/: build.gradle
JScan/app/: build.gradle
JVideo/app/: build.gradle
JVideoPlay/app/: build.gradle
JWeb/: settings.gradle
JWeb/app/: build.gradle
QrCodeDemo4/app/: build.gradle
ThreadTest/app/: build.gradle
WebTest/: WebTest.sln
WebTest/WebTest/: Program.cs  Startup.cs  WebTest.csproj  bower.json  libman.json
WebTest/WebTest1/: WebTest.sln
WenWeb/: WenWeb.sln
WenWeb/WenWeb/: Global.asax  Global.asax.cs  Startup.cs  WenWeb.csproj  packages.config
XCamera/app/: build.gradle
(+283 files in other folders)
